# cmake_tutorial

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
v1/: CMakeLists.txt  README.md
v1-cmake-intro/: README.md
v1-cmake-intro/src/: CMakeLists.txt  take_two.cpp
v1/src/: CMakeLists.txt
v2/: CMakeLists.txt  README.md
v2-submodules/: CMakeLists.txt  README.md
v2-submodules/src/: CMakeLists.txt  take_two_project.cpp
v2/include/take_two/: take_two.hpp
v2/src/: CMakeLists.txt
v3/: CMakeLists.txt  README.md
v3-examples/: CMakeLists.txt  README.md
v3-examples/examples/: example.cpp
v3-examples/src/: CMakeLists.txt
v3/src/: CMakeLists.txt
v3/tests/: test_take_two.cpp
v4/: CMakeLists.txt  README.md
v4-unit-tests/: CMakeLists.txt  README.md
v4-unit-tests/src/: CMakeLists.txt
v4-unit-tests/tests/: CMakeLists.txt
v4/include/take_two/: take_two.hpp
v5/: CMakeLists.txt  LICENSE  README.md
v5-documentation/: CMakeLists.txt  README.md
v5-documentation/docs/: CMakeLists.txt
v5-documentation/examples/: CMakeLists.txt
v5-documentation/src/: CMakeLists.txt
v5-documentation/tests/: test_take_two.cpp
v5/docs/: CMakeLists.txt
v5/src/: CMakeLists.txt  take_two.cpp
v5/tests/: CMakeLists.txt
v6/: README.md
v6-continuous-integration/: CMakeLists.txt  README.md
v6-continuous-integration/docs/: main.md
v6-continuous-integration/examples/: CMakeLists.txt  example.cpp
v6-continuous-integration/tests/: CMakeLists.txt
v7/: CMakeLists.txt  README.md
v7-docker/: CMakeLists.txt  README.md  docker_run.sh
v7-docker/docker/: Dockerfile  docker_install.sh
v7-docker/src/: CMakeLists.txt
v8-cookiecutter/: README.md
